--- a/plugins/gradle/build.gradle
+++ b/plugins/gradle/build.gradle
@@ -28,7 +28,7 @@ compileJava {
 }
 
 ext {
-    roboVMVersion = '2.3.14-SNAPSHOT'
+    roboVMVersion = '2.3.13'
     nexusUsername = System.getenv('MAVEN_USERNAME')
     nexusPassword = System.getenv('MAVEN_PASSWORD')
 }
